@@ -68,7 +68,7 @@ return (object)[
         '/class/registry.php',
         '/class/utilities.php',
         '/class/util.php',
-        //            '/include/constants.php',
+        '/preloads/index.php',
         '/include/functions.php',
         '/ajaxrating.txt',
     ],
